antlr_approach/dist_tmp/HelloParser.py
# Generated from Hello.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class HelloParser ( Parser ):

    grammarFileName = "Hello.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'+'", "'-'", "'++'", "'--'", 
                     "'*'", "'/'", "'%'", "'\\'", "')'", "'('", "'['", "']'", 
                     "'{'", "'}'", "':'", "';'", "','", "'.'", "'>'", "'<'", 
                     "'='", "'=='", "'>='", "'<='", "'!='", "'<<'", "'>>'", 
                     "'int'", "'float'", "'char'", "'string'", "'bool'", 
                     "'void'", "'while'", "'for'", "'if'", "'else'", "'true'", 
                     "'false'", "'cin'", "'cout'", "'main'", "'using'", 
                     "'namespace'", "'std'", "'include'", "'#'", "'return'", 
                     "'break'", "'continue'", "'delete'", "'endl'", "'class'", 
                     "'public'", "'private'", "'protected'" ]

    symbolicNames = [ "<INVALID>", "WS", "PLUS", "MINUS", "DPLUS", "DMINUS", 
                      "MUL", "DIV", "MOD", "ESC", "RPARENTH", "LPARENTH", 
                      "LSQUARE", "RSQUARE", "LBRACE", "RBRACE", "COLON", 
                      "SEMICOLON", "COMMA", "DOT", "GTHAN", "LTHAN", "EQUAL", 
                      "DEQUAL", "GREATER_EQUAL", "LESS_EQUAL", "NOT_EQUAL", 
                      "LBIT", "RBIT", "INT", "FLOAT", "CHAR", "STRING", 
                      "BOOL", "VOID", "WHILE", "FOR", "IF", "ELSE", "TRUE", 
                      "FALSE", "CIN", "COUT", "MAIN", "USING", "NAMESPACE", 
                      "STD", "INCLUDE", "HASH", "RETURN", "BREAK", "CONTINUE", 
                      "DELETE", "ENDL", "CLASS", "PUBLIC", "PRIVATE", "PROTECTED", 
                      "FLOATVAR", "INTVAR", "VARNAME", "STRINGVAR", "COMMENTVAR" ]

    RULE_program = 0
    RULE_block = 1
    RULE_block_part = 2
    RULE_main_func = 3
    RULE_using_namespace_std = 4
    RULE_class_object = 5
    RULE_class_variable = 6
    RULE_class_functions = 7
    RULE_function = 8
    RULE_parameters = 9
    RULE_access_modifier = 10
    RULE_statement = 11
    RULE_assign_var = 12
    RULE_for_statement = 13
    RULE_while_statement = 14
    RULE_if_statement = 15
    RULE_else_block = 16
    RULE_func_block = 17
    RULE_return_statement = 18
    RULE_condition = 19
    RULE_variable_def = 20
    RULE_declare_var = 21
    RULE_declare_assign_var = 22
    RULE_print_out = 23
    RULE_cout_expression_string = 24
    RULE_cout_expression = 25
    RULE_printable = 26
    RULE_calculation = 27
    RULE_include = 28
    RULE_cin_in = 29
    RULE_number = 30
    RULE_return_type = 31
    RULE_data_type = 32
    RULE_math_operator = 33
    RULE_comparator = 34
    RULE_var_value = 35
    RULE_bool_value = 36

    ruleNames =  [ "program", "block", "block_part", "main_func", "using_namespace_std", 
                   "class_object", "class_variable", "class_functions", 
                   "function", "parameters", "access_modifier", "statement", 
                   "assign_var", "for_statement", "while_statement", "if_statement", 
                   "else_block", "func_block", "return_statement", "condition", 
                   "variable_def", "declare_var", "declare_assign_var", 
                   "print_out", "cout_expression_string", "cout_expression", 
                   "printable", "calculation", "include", "cin_in", "number", 
                   "return_type", "data_type", "math_operator", "comparator", 
                   "var_value", "bool_value" ]

    EOF = Token.EOF
    WS=1
    PLUS=2
    MINUS=3
    DPLUS=4
    DMINUS=5
    MUL=6
    DIV=7
    MOD=8
    ESC=9
    RPARENTH=10
    LPARENTH=11
    LSQUARE=12
    RSQUARE=13
    LBRACE=14
    RBRACE=15
    COLON=16
    SEMICOLON=17
    COMMA=18
    DOT=19
    GTHAN=20
    LTHAN=21
    EQUAL=22
    DEQUAL=23
    GREATER_EQUAL=24
    LESS_EQUAL=25
    NOT_EQUAL=26
    LBIT=27
    RBIT=28
    INT=29
    FLOAT=30
    CHAR=31
    STRING=32
    BOOL=33
    VOID=34
    WHILE=35
    FOR=36
    IF=37
    ELSE=38
    TRUE=39
    FALSE=40
    CIN=41
    COUT=42
    MAIN=43
    USING=44
    NAMESPACE=45
    STD=46
    INCLUDE=47
    HASH=48
    RETURN=49
    BREAK=50
    CONTINUE=51
    DELETE=52
    ENDL=53
    CLASS=54
    PUBLIC=55
    PRIVATE=56
    PROTECTED=57
    FLOATVAR=58
    INTVAR=59
    VARNAME=60
    STRINGVAR=61
    COMMENTVAR=62

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def include(self):
            return self.getTypedRuleContext(HelloParser.IncludeContext,0)


        def using_namespace_std(self):
            return self.getTypedRuleContext(HelloParser.Using_namespace_stdContext,0)


        def block(self):
            return self.getTypedRuleContext(HelloParser.BlockContext,0)


        def getRuleIndex(self):
            return HelloParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = HelloParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.state = 81
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [HelloParser.HASH]:
                self.enterOuterAlt(localctx, 1)
                self.state = 74
                self.include()
                self.state = 75
                self.using_namespace_std()
                self.state = 76
                self.block()
                pass
            elif token in [HelloParser.USING]:
                self.enterOuterAlt(localctx, 2)
                self.state = 78
                self.using_namespace_std()
                self.state = 79
                self.block()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block_part(self):
            return self.getTypedRuleContext(HelloParser.Block_partContext,0)


        def main_func(self):
            return self.getTypedRuleContext(HelloParser.Main_funcContext,0)


        def getRuleIndex(self):
            return HelloParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = HelloParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        try:
            self.state = 87
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 83
                self.block_part(0)
                self.state = 84
                self.main_func()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 86
                self.main_func()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Block_partContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_def(self):
            return self.getTypedRuleContext(HelloParser.Variable_defContext,0)


        def function(self):
            return self.getTypedRuleContext(HelloParser.FunctionContext,0)


        def class_object(self):
            return self.getTypedRuleContext(HelloParser.Class_objectContext,0)


        def block_part(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HelloParser.Block_partContext)
            else:
                return self.getTypedRuleContext(HelloParser.Block_partContext,i)


        def getRuleIndex(self):
            return HelloParser.RULE_block_part

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock_part" ):
                listener.enterBlock_part(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock_part" ):
                listener.exitBlock_part(self)



    def block_part(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = HelloParser.Block_partContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_block_part, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 90
                self.variable_def()
                pass

            elif la_ == 2:
                self.state = 91
                self.function()
                pass

            elif la_ == 3:
                self.state = 92
                self.class_object()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 99
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = HelloParser.Block_partContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_block_part)
                    self.state = 95
                    if not self.precpred(self._ctx, 4):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                    self.state = 96
                    self.block_part(5) 
                self.state = 101
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Main_funcContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def return_type(self):
            return self.getTypedRuleContext(HelloParser.Return_typeContext,0)


        def MAIN(self):
            return self.getToken(HelloParser.MAIN, 0)

        def LPARENTH(self):
            return self.getToken(HelloParser.LPARENTH, 0)

        def RPARENTH(self):
            return self.getToken(HelloParser.RPARENTH, 0)

        def LBRACE(self):
            return self.getToken(HelloParser.LBRACE, 0)

        def func_block(self):
            return self.getTypedRuleContext(HelloParser.Func_blockContext,0)


        def RBRACE(self):
            return self.getToken(HelloParser.RBRACE, 0)

        def SEMICOLON(self):
            return self.getToken(HelloParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return HelloParser.RULE_main_func

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain_func" ):
                listener.enterMain_func(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain_func" ):
                listener.exitMain_func(self)




    def main_func(self):

        localctx = HelloParser.Main_funcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_main_func)
        try:
            self.state = 119
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.return_type()
                self.state = 103
                self.match(HelloParser.MAIN)
                self.state = 104
                self.match(HelloParser.LPARENTH)
                self.state = 105
                self.match(HelloParser.RPARENTH)
                self.state = 106
                self.match(HelloParser.LBRACE)
                self.state = 107
                self.func_block()
                self.state = 108
                self.match(HelloParser.RBRACE)
                self.state = 109
                self.match(HelloParser.SEMICOLON)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self.return_type()
                self.state = 112
                self.match(HelloParser.MAIN)
                self.state = 113
                self.match(HelloParser.LPARENTH)
                self.state = 114
                self.match(HelloParser.RPARENTH)
                self.state = 115
                self.match(HelloParser.LBRACE)
                self.state = 116
                self.match(HelloParser.RBRACE)
                self.state = 117
                self.match(HelloParser.SEMICOLON)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Using_namespace_stdContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def USING(self):
            return self.getToken(HelloParser.USING, 0)

        def NAMESPACE(self):
            return self.getToken(HelloParser.NAMESPACE, 0)

        def STD(self):
            return self.getToken(HelloParser.STD, 0)

        def SEMICOLON(self):
            return self.getToken(HelloParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return HelloParser.RULE_using_namespace_std

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUsing_namespace_std" ):
                listener.enterUsing_namespace_std(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUsing_namespace_std" ):
                listener.exitUsing_namespace_std(self)




    def using_namespace_std(self):

        localctx = HelloParser.Using_namespace_stdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_using_namespace_std)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(HelloParser.USING)
            self.state = 122
            self.match(HelloParser.NAMESPACE)
            self.state = 123
            self.match(HelloParser.STD)
            self.state = 124
            self.match(HelloParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Class_objectContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(HelloParser.CLASS, 0)

        def VARNAME(self):
            return self.getToken(HelloParser.VARNAME, 0)

        def LBRACE(self):
            return self.getToken(HelloParser.LBRACE, 0)

        def class_variable(self):
            return self.getTypedRuleContext(HelloParser.Class_variableContext,0)


        def class_functions(self):
            return self.getTypedRuleContext(HelloParser.Class_functionsContext,0)


        def RBRACE(self):
            return self.getToken(HelloParser.RBRACE, 0)

        def SEMICOLON(self):
            return self.getToken(HelloParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return HelloParser.RULE_class_object

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_object" ):
                listener.enterClass_object(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_object" ):
                listener.exitClass_object(self)




    def class_object(self):

        localctx = HelloParser.Class_objectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_class_object)
        try:
            self.state = 148
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.match(HelloParser.CLASS)
                self.state = 127
                self.match(HelloParser.VARNAME)
                self.state = 128
                self.match(HelloParser.LBRACE)
                self.state = 129
                self.class_variable(0)
                self.state = 130
                self.class_functions(0)
                self.state = 131
                self.match(HelloParser.RBRACE)
                self.state = 132
                self.match(HelloParser.SEMICOLON)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.match(HelloParser.CLASS)
                self.state = 135
                self.match(HelloParser.VARNAME)
                self.state = 136
                self.match(HelloParser.LBRACE)
                self.state = 137
                self.class_functions(0)
                self.state = 138
                self.match(HelloParser.RBRACE)
                self.state = 139
                self.match(HelloParser.SEMICOLON)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 141
                self.match(HelloParser.CLASS)
                self.state = 142
                self.match(HelloParser.VARNAME)
                self.state = 143
                self.match(HelloParser.LBRACE)
                self.state = 144
                self.class_variable(0)
                self.state = 145
                self.match(HelloParser.RBRACE)
                self.state = 146
                self.match(HelloParser.SEMICOLON)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Class_variableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def access_modifier(self):
            return self.getTypedRuleContext(HelloParser.Access_modifierContext,0)


        def COLON(self):
            return self.getToken(HelloParser.COLON, 0)

        def variable_def(self):
            return self.getTypedRuleContext(HelloParser.Variable_defContext,0)


        def assign_var(self):
            return self.getTypedRuleContext(HelloParser.Assign_varContext,0)


        def class_variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HelloParser.Class_variableContext)
            else:
                return self.getTypedRuleContext(HelloParser.Class_variableContext,i)


        def getRuleIndex(self):
            return HelloParser.RULE_class_variable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_variable" ):
                listener.enterClass_variable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_variable" ):
                listener.exitClass_variable(self)



    def class_variable(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = HelloParser.Class_variableContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_class_variable, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 151
                self.access_modifier()
                self.state = 152
                self.match(HelloParser.COLON)
                self.state = 153
                self.variable_def()
                pass

            elif la_ == 2:
                self.state = 155
                self.variable_def()
                pass

            elif la_ == 3:
                self.state = 156
                self.assign_var()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 163
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = HelloParser.Class_variableContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_class_variable)
                    self.state = 159
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 160
                    self.class_variable(2) 
                self.state = 165
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Class_functionsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def access_modifier(self):
            return self.getTypedRuleContext(HelloParser.Access_modifierContext,0)


        def COLON(self):
            return self.getToken(HelloParser.COLON, 0)

        def function(self):
            return self.getTypedRuleContext(HelloParser.FunctionContext,0)


        def class_functions(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HelloParser.Class_functionsContext)
            else:
                return self.getTypedRuleContext(HelloParser.Class_functionsContext,i)


        def getRuleIndex(self):
            return HelloParser.RULE_class_functions

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_functions" ):
                listener.enterClass_functions(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_functions" ):
                listener.exitClass_functions(self)



    def class_functions(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = HelloParser.Class_functionsContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_class_functions, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [HelloParser.PUBLIC, HelloParser.PRIVATE, HelloParser.PROTECTED]:
                self.state = 167
                self.access_modifier()
                self.state = 168
                self.match(HelloParser.COLON)
                self.state = 169
                self.function()
                pass
            elif token in [HelloParser.INT, HelloParser.FLOAT, HelloParser.CHAR, HelloParser.STRING, HelloParser.BOOL, HelloParser.VOID]:
                self.state = 171
                self.function()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 178
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = HelloParser.Class_functionsContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_class_functions)
                    self.state = 174
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 175
                    self.class_functions(2) 
                self.state = 180
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class FunctionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def return_type(self):
            return self.getTypedRuleContext(HelloParser.Return_typeContext,0)


        def VARNAME(self):
            return self.getToken(HelloParser.VARNAME, 0)

        def LPARENTH(self):
            return self.getToken(HelloParser.LPARENTH, 0)

        def parameters(self):
            return self.getTypedRuleContext(HelloParser.ParametersContext,0)


        def RPARENTH(self):
            return self.getToken(HelloParser.RPARENTH, 0)

        def LBRACE(self):
            return self.getToken(HelloParser.LBRACE, 0)

        def func_block(self):
            return self.getTypedRuleContext(HelloParser.Func_blockContext,0)


        def RBRACE(self):
            return self.getToken(HelloParser.RBRACE, 0)

        def getRuleIndex(self):
            return HelloParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)




    def function(self):

        localctx = HelloParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_function)
        try:
            self.state = 198
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 181
                self.return_type()
                self.state = 182
                self.match(HelloParser.VARNAME)
                self.state = 183
                self.match(HelloParser.LPARENTH)
                self.state = 184
                self.parameters()
                self.state = 185
                self.match(HelloParser.RPARENTH)
                self.state = 186
                self.match(HelloParser.LBRACE)
                self.state = 187
                self.func_block()
                self.state = 188
                self.match(HelloParser.RBRACE)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 190
                self.return_type()
                self.state = 191
                self.match(HelloParser.VARNAME)
                self.state = 192
                self.match(HelloParser.LPARENTH)
                self.state = 193
                self.match(HelloParser.RPARENTH)
                self.state = 194
                self.match(HelloParser.LBRACE)
                self.state = 195
                self.func_block()
                self.state = 196
                self.match(HelloParser.RBRACE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParametersContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def data_type(self):
            return self.getTypedRuleContext(HelloParser.Data_typeContext,0)


        def VARNAME(self):
            return self.getToken(HelloParser.VARNAME, 0)

        def COMMA(self):
            return self.getToken(HelloParser.COMMA, 0)

        def parameters(self):
            return self.getTypedRuleContext(HelloParser.ParametersContext,0)


        def getRuleIndex(self):
            return HelloParser.RULE_parameters

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameters" ):
                listener.enterParameters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameters" ):
                listener.exitParameters(self)




    def parameters(self):

        localctx = HelloParser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_parameters)
        try:
            self.state = 208
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 200
                self.data_type()
                self.state = 201
                self.match(HelloParser.VARNAME)
                pass
